--- a/BobRossCode.html
+++ b/BobRossCode.html
@@ -97,7 +97,7 @@
 </header>
     <nav style="text-align: right;">
         <h3>Want to see how all this is done?</h3>
-            <a href="../assets/Index.html"></a>
+            <a href="../assets/BobRossCode.html">Click Here!</a>
             
     </nav>
 </body>
